tests/basic/bad/test56.pepa
% File: tests/bad/test56.pepa
% Syntax error, duplicated comma in prefix
P = (a,, r).P;
(P <> P)
